# tf-acore-aas

./: .context  .detectsecretsrc  .env.example  .gitignore  .gitlab-ci.yml  .secrets.baseline  AGENTS.md  CLAUDE.md  GEMINI.md  Makefile  README.md  README2.md  README3 (1).md  README3.md  docker-compose.yml  e2e001.txt  e2e002.txt  pyproject.toml  pyrightconfig.json  treadme.md  worker-prompt  worker-prompt.md
.githooks/: pre-push
.github/ISSUE_TEMPLATE/: task.md
agents/: .gitlab-ci-agent.yml
agents/echo-agent/: handler.py  pyproject.toml
agents/echo-agent/tests/: __init__.py  test_handler.py  test_starter_artifacts.py
agents/echo-agent/tests/golden/: invoke_cases.json
agents/platform-diagnostics/: handler.py  pyproject.toml
agents/platform-diagnostics/tests/: test_handler.py
ai-context/: AGENTS.md  CLAUDE.md  GEMINI.md
docs/: ARCHITECTURE.md  DOCS_SYNC.json  PLAN.md  README.md  ROADMAP.md  TASKS.md  bootstrap-guide.md  entra-setup.md  openapi.yaml  platform-spec-a5c-cell.pptx  ~$platform-spec-a5c-cell.pptx
docs/contracts/: ag-ui-bootstrap-contract.md
docs/decisions/: ADR-001-agentcore-runtime.md  ADR-002-entra-not-cognito.md  ADR-003-rest-api-not-http-api.md  ADR-004-act-on-behalf-identity.md  ADR-005-declared-invocation-mode.md  ADR-006-uv-pyproject.md  ADR-007-cdk-terraform.md  ADR-008-zip-deployment-default.md  ADR-009-region-zigzag.md  ADR-010-async-agentcore-native.md  ADR-011-thin-bff.md  ADR-012-dynamodb-capacity.md  ADR-013-entra-rbac-roles-claim.md  ADR-014-minimise-vpc-bound-services.md  ADR-015-agent-release-governance-and-rollback.md  ADR-016-platform-internal-tenant.md  ADR-017-tenant-capability-configuration-model.md  ADR-018-agentcore-ag-ui-integration.md
docs/development/: AGENT-DEVELOPER-GUIDE.md  LOCAL-SETUP.md
docs/images/: tf_acore_aas_architecture.drawio  tf_acore_aas_architecture_engineer.drawio  tf_acore_aas_architecture_exec.drawio  tf_acore_aas_cdk_dependencies_engineer.drawio  tf_acore_aas_cdk_dependencies_exec.drawio  tf_acore_aas_cdk_stack_dependencies.drawio  tf_acore_aas_entities_state_diagram.drawio  tf_acore_aas_request_lifecycle_engineer.drawio  (+1 more)
scripts/: agent-invoke.py  agent_manifest.py  backfill_agent_status.py  backfill_tenant_execution_role_arn.py  bootstrap.py  build_layer.py  check_gitlab_protected_environment.py  check_rules_sync.sh  deploy_agent.py  deploy_frontend.py  dev-bootstrap.py  dev-invoke.py  docs_sync_audit.py  evaluate_agent.py  failover_lock.py  hash_layer.py  install-dev-tools.sh  layer_manifest.py  ops.py  package_agent.py  plan_dev.py  promote_agent.py  register_agent.py  rollback_agent.py  rollback_lambda.py  task.py  validate_agent_manifest.py  validate_local.py  wait_for_local_services.py  worktree_issues.py
spa/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: __init__.py  platform_aws.py  platform_utils.py
src/data-access-lib/: pyproject.toml
src/data-access-lib/src/data_access/: __init__.py  client.py  exceptions.py  models.py
src/data-access-lib/src/data_access/domains/: __init__.py  agent.py  audit.py  capability.py  tenant.py
src/data-access-lib/tests/: conftest.py  test_capability_client.py  test_client.py  test_dynamodb.py  test_s3.py  test_violations.py
(+275 files in other folders)
