[project]
name = "platform-aas"
version = "0.1.0"
description = "AgentCore Agent as a Service platform"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.15.0",
    "detect-secrets>=1.5.0",
    "boto3>=1.37.0",
    "boto3-stubs[essential,lambda,dynamodb,s3,ssm,secretsmanager,sts,sqs,events]>=1.37.0",
    "aws-lambda-powertools>=3.3.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "data-access-lib",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Scripts and handlers that are stubs may have no functions defined yet
"scripts/*" = ["F401"]
"src/*/handler.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = false
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
addopts = "--tb=short"

[tool.uv.workspace]
members = [
    "src/data-access-lib",
]

[tool.uv.sources]
data-access-lib = { workspace = true }
