[project]
name = "echo-agent"
version = "1.0.0"
description = "Reference echo agent demonstrating all three invocation modes"
requires-python = ">=3.12"
dependencies = [
    "bedrock-agentcore>=0.1.4",
    "strands-agents>=0.4.1",
    "boto3>=1.37.0",
    "aws-lambda-powertools>=3.3.0",
]

[dependency-groups]
dev = [
    "bedrock-agentcore-starter-toolkit>=0.2.5",
    "pytest>=8.0.0",
]

[tool.agentcore]
name = "echo-agent"
owner_team = "platform"
tier_minimum = "basic"
handler = "handler:invoke"
invocation_mode = "sync"
estimated_duration_seconds = 5

[tool.agentcore.llm]
model_id = "anthropic.claude-sonnet-4-6"
max_tokens = 1024

[tool.agentcore.deployment]
type = "zip"
