[project]
name = "data-access-lib"
version = "0.1.0"
description = "Tenant-scoped DynamoDB and S3 access library"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37.0",
    "aws-lambda-powertools>=3.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "moto[dynamodb,s3]>=5.0.0",
    "boto3-stubs[dynamodb,s3]>=1.37.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_access"]
